$Id: ChangeLog,v 1.112 2007-10-06 02:10:32 cmatsuoka Exp $

Stable versions
---------------

2.3.2 ():
	- added ModPlug Tracker IT quirk: ignore sample global volume (fixes
	  speech in "Deep In Her Eyes Remake", reported by Douglas Carmichael)

2.3.1 (20071005):
	- added PTM global volume effect
	- fixed output filename setting in wav output
	- fixed size field setting in wav driver
	- fixed configure option --sysconfdir (reported by Douglas Carmichael)
	- fixed major bug in anticlick routine generating clicks in the
	  right audio channel (reported by Douglas Carmichael)
	- changed rampdown time in Hipolito's anticlick algorithm (removes
	  clicks from PM's 2nd Reality, reported by Douglas Carmichael)
	- changed default file name when writing to WAV to <modname>.wav

2.3.0 (20071002):
	- added runtime endianism detection
	- added extractor for Epic Games' Unreal UMX files
	- added workaround for S3M "Return of Litmus" 0x87 quirk (reported
	  by Ralf Hoffmann)
	- added DigiBooster Pro module loader
	- added Fmod OXM depacker (depends on oggdec)
	- enabled Tracker Packer 3 prowizard loader
	- enabled The Player 4.x prowizard loader
	- removed reverse-endian sample reading options and XMP_CTL_BIGEND
	- fixed semantics of big/little endian options, moved to file driver
	- fixed memory corruption in Quadra Composer module loader
	- fixed Quadra Composer vibrato, offset and jump effects
	- fixed endianism problem in KSM and Zen Packer loaders
	- fixed transposition of Digital Tracker module notes
	- fixed build for QNX Neutrino 6.3.2
	- fixed OSS sequencer driver timing (reported by Reynir Stefansson)
	- fixed BMP/Audacious plugin to build also as XMMS plugin
	- fixed Impulse Tracker identification in S3M loader
	- fixed Module Protector test to recognize mods from "Made In Croatia"
	- fixed crash when scanning modules with length zero (bug #1800766)
	- fixed driver detection in NetBSD (don't try to build OSS driver)